testing/stage_12/valid/char_function_argument.c
char c(char a)
{
	return a;
}

int main() 
{
	char b=-3;
	return c(b);
}