testing/stage_12/invalid/missing name_pointer.c
int main() 
{
	char *=2;
	return 2;
}